--- a/settings.json
+++ b/settings.json
@@ -43,8 +43,8 @@
   },
   "published": [],
   "extension": true,
-  "widthScale": 45.46875,
-  "heightScale": 85.14285714285714,
+  "widthScale": 90.88541666666667,
+  "heightScale": 85.9047619047619,
   "lineNumbers": false,
   "vimEnabled": false,
   "autoClosePairs": false,
